--- a/project1.html
+++ b/project1.html
@@ -19,8 +19,8 @@
 </head>
 
 <nav class="sidebar">
-	<h2>Germaine Lau</h2>
-</nav>
+    <a href="index.html">Germaine Lau</a>
+           </nav>
 <div class="vertical">
 	<ul> 
 		<li>1</li>
@@ -29,7 +29,44 @@
 		<li>4</li>
 		<li>5</li>
 		<li>6</li>
+		<li>7</li>
+		<li>8</li>
 	</ul>
+	<article>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.</p>
+	</article>
+	<div class="gallery">
+		<div class="photo_item">
+			<img src="images/image_placeholder_1.jpg" alt="" class="photogrid">
+		</div>
+		<div class="photo_item">
+			<img src="images/image_placeholder_2.jpg" alt="" class="photogrid">
+		</div>
+		<div class="photo_item">
+			<img src="images/image_placeholder_2.jpg" alt="" class="photogrid">
+		</div>
+		<div class="photo_item">
+			<img src="images/image_placeholder_1.jpg" alt="" class="photogrid">
+		</div>
+		<div class="photo_item">
+			<img src="images/image_placeholder_1.jpg" alt="" class="photogrid">
+		</div>
+		<div class="photo_item">
+			<img src="images/image_placeholder_2.jpg" alt="" class="photogrid">
+		</div>
+		<div class="photo_item">
+			<img src="images/image_placeholder_2.jpg" alt="" class="photogrid">
+		</div>
+		<div class="photo_item">
+			<img src="images/image_placeholder_1.jpg" alt="" class="photogrid">
+		</div>
+		<div class="photo_item">
+			<img src="images/image_placeholder_1.jpg" alt="" class="photogrid">
+		</div>
+		<div class="photo_item">
+			<img src="images/image_placeholder_2.jpg" alt="" class="photogrid">
+		</div>
+	</div>
 </div>
 
 
@@ -38,6 +75,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 <script src="js/plugins.js"></script>
+<script src="js/vendor.js"></script>
 <script src="js/main.js"></script>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
