--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title></title>
+  <title>Germaine Lau</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,54 +20,41 @@
 </head>
 
 <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-            <![endif]-->
 
-            <!-- Add your site or application content here -->
-<!--             <header>
-             <img src="images/image_placeholder_1.jpg" id="image">
-           </header> -->
-           <div id="fullpage">
-             <div class="section active"><img src="images/image_placeholder_1.jpg" class="image"></div>
-             <div class="section"><img src="images/image_placeholder_2.jpg" class="second-image "></div>
-             <div class="section"><img src="images/image_placeholder_1.jpg" class="third-image"></div>
-             <div class="section"><img src="images/image_placeholder_2.jpg" class="fourth-image"></div>
-             <div class="section"><img src="images/image_placeholder_1.jpg" class="fifth-image"></div>
-           </div>
-           <nav class="sidebar">
-             <a href="index.html">Germaine Lau</a>
-           </nav>
-           <div class="view">
-             <div class="one black">
-               <p>01</p>
-               <i class="fa fa-bars" aria-hidden="true"></i>
-             </div>
-             <p> / </p>
-             <div class="four">
-               <p>04</p>
-               <i class="fa fa-th-large" aria-hidden="true"></i>
-             </div>
-           </div>
-           
+<div id="normalContainer">
+    <div id="header"><img src="images/image_placeholder_1.jpg"></div>
+    <div class="page" id="page1"><a href="Photography.html"><img src="images/image_placeholder_2.jpg""></a></div>
+    <div class="page" id="page2"><img src="images/image_placeholder_1.jpg"></div>
+    <div class="page" id="page3"><img src="images/image_placeholder_2.jpg""></div>
+    <div class="page" id="page4"><img src="images/image_placeholder_1.jpg"></div>
+  </div>
 
+  <div id="views">
+    <span id="one" class="black">01 <i class="fa fa-bars" aria-hidden="true"></i></span>
+    <span id="slash">/</span>
+    <span id="four">04 <i class="fa fa-th-large" aria-hidden="true"></i></span>
+  </div>
 
-           <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <nav class="sidebar">
+   <a href="index.html">Germaine Lau</a>
+ </nav>
 
-           <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-           <script src="js/plugins.js"></script>
-                      <script type="text/javascript" src="js/vendor/jquery.fullPage.min.js"></script>
-           <script src="js/main.js"></script>
+ <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-           <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-           <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-              function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-          </script>
-        </body>
+ <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+ <script src="js/plugins.js"></script>
+ <script type="text/javascript" src="js/vendor/jquery.fullPage.min.js"></script>
+ <script src="js/main.js"></script>
 
-        </html>
+ <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+ <script>
+  (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+  e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+  e.src='//www.google-analytics.com/analytics.js';
+  r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+  ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+</script>
+</body>
+
+</html>
