Update: Deleted Scroll

--- a/Photography.html
+++ b/Photography.html
@@ -22,6 +22,7 @@
 <nav class="sidebar">
 	<a href="index.html">Germaine Lau</a>
 </nav>
+<section>
 <div class="vertical">
 	<ul> 
 		<li>1</li>
@@ -34,27 +35,23 @@
 		<li>8</li>
 		<li>9</li>
 	</ul>
+	</div>
 	<h3>Description:</h3>
 	<article>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi utNeque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam.</p>
 	</article>
-
+	</section>
 	<div id="up"></div>
 	<div id="down"></div>
 	<div class="gallery" id="gallery_container">
 
-		<div class="gallery_one photo_item">
+		<div class="gallery_one">
 			<img src="images/DSC_7127.jpg" alt="">
 			<img src="images/Lau_2Timer1.jpg" alt="">
 			<img src="images/R-5.jpg" alt="">
 			<img src="images/Lau_G_Special_1.jpg" alt="">
 			<img src="images/Lau_Challenge3.jpg" alt="">
 		</div>
-	</div>
-
-	<div id="up_2"></div>
-	<div id="down_2"></div>		
-		<div id="gallery_container_two">
 
 		<div class="gallery_two">
 			<img src="images/Lau_G_Shallow.jpg" alt="">
@@ -62,9 +59,9 @@
 			<img src="images/Lau_G_Light_1 (Edit) copy.jpg" alt="">
 			<img src="images/R-4.jpg" alt="">
 		</div>
-
 	</div>
-		<div id="hover"></div>
+	
+
 
 
 
