Update: Changed Margins

--- a/Photography.html
+++ b/Photography.html
@@ -22,27 +22,35 @@
 <nav class="sidebar">
 	<a href="index.html">Germaine Lau</a>
 </nav>
-<section>
-<div class="vertical">
+<div class="firstVertical">
 	<ul> 
 		<li>1</li>
 		<li>2</li>
+	</ul>
+</div>
+<div class="vertical">
+	<ul> 
 		<li>3</li>
 		<li>4</li>
 		<li>5</li>
-		<li>6</li>
-		<li>7</li>
-		<li>8</li>
-		<li>9</li>
 	</ul>
-	</div>
-	<h3>Description:</h3>
-	<article>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi utNeque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam.</p>
-	</article>
-	</section>
-	<div id="up"></div>
-	<div id="down"></div>
+</div>
+<section> 
+	<div class="line"></div>
+	<h3> Type: </h3>
+	<p> Photography</p> 
+</section>
+<div class="date">
+	<h3>Date:</h3>
+	<div class="date_2"><p>2015 - present</p></div>
+</div>
+<h3>Description:</h3>
+<article>
+	<p>From baby doll heads to skyscrapers-- a collection of photos taken since 2015. </p>
+</article>
+<!-- 	<div id="up"></div>
+	<div id="down"></div> -->
+
 	<div class="gallery" id="gallery_container">
 
 		<div class="gallery_one">
