Update: Functions that appear on scroll

--- a/Photography.html
+++ b/Photography.html
@@ -22,53 +22,56 @@
 <nav class="sidebar">
 	<a href="index.html">Germaine Lau</a>
 </nav>
-<div class="firstVertical">
-	<ul> 
-		<li>1</li>
-		<li>2</li>
-	</ul>
+<div class="general">
+	<div id="firstVertical">
+		<ul> 
+			<li>1</li>
+			<li>2</li>
+		</ul>
+	</div>
+	<div id="vertical">
+		<ul> 
+			<li>3</li>
+			<li>4</li>
+			<li>5</li>
+		</ul>
+	</div>
+	<section> 
+		<div class="line"></div>
+		<h3> Type: </h3>
+		<p> Photography</p> 
+	</section>
+	<div id="date">
+		<h3>Date:</h3>
+		<div id="date_2"><p>2015 - present</p></div>
+	</div>
+	<h3>Description:</h3>
+	<article>
+	<p>From doll heads to skyscrapers&mdash; a collection of photos taken since 2015. </p>
+	</article>
 </div>
-<div class="vertical">
-	<ul> 
-		<li>3</li>
-		<li>4</li>
-		<li>5</li>
-	</ul>
-</div>
-<section> 
-	<div class="line"></div>
-	<h3> Type: </h3>
-	<p> Photography</p> 
-</section>
-<div class="date">
-	<h3>Date:</h3>
-	<div class="date_2"><p>2015 - present</p></div>
-</div>
-<h3>Description:</h3>
-<article>
-	<p>From baby doll heads to skyscrapers-- a collection of photos taken since 2015. </p>
-</article>
-<!-- 	<div id="up"></div>
-	<div id="down"></div> -->
 
-	<div class="gallery" id="gallery_container">
+	<div class="gallery">
 
-		<div class="gallery_one">
+		<div id="gallery_one">
 			<img src="images/DSC_7127.jpg" alt="">
 			<img src="images/Lau_2Timer1.jpg" alt="">
 			<img src="images/R-5.jpg" alt="">
 			<img src="images/Lau_G_Special_1.jpg" alt="">
 			<img src="images/Lau_Challenge3.jpg" alt="">
+			<img src="images/Tree.jpg" alt="">
 		</div>
 
-		<div class="gallery_two">
+		<div id="gallery_two">
 			<img src="images/Lau_G_Shallow.jpg" alt="">
 			<img src="images/DSC_7154.jpg" alt="">
 			<img src="images/Lau_G_Light_1 (Edit) copy.jpg" alt="">
 			<img src="images/R-4.jpg" alt="">
+			<img src="images/Lau_CampPortB1.jpg" alt="">
 		</div>
 	</div>
 	
+<div class="scrollUp"><i class="fa fa-angle-up" aria-hidden="true"></i></div>
 
 
 
