Update: Sidebar and New Pages

--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
 
 <body>
 
+  <nav class="sidebar">
+    <div class="title">
+      <a href="#">Germaine Lau</a>
+    </div>
+
+    <ul>
+      <li><a href="index.html" class="button currentLink">Home</a></li>
+      <li><a href="#" class="button">About Me</a></li>
+      <li><a href="Photography.html" class=" button">Photography</a></li>
+      <li><a href="#" class="button">Visual Design</a></li>
+      <li><a href="#" class="button">Prints</a></li>
+      <li><a href="#" class="button">Branding</a></li>
+      <li>    <a href="#" class="close"><i class="fa fa-angle-left" aria-hidden="true"></i></a></li>
+    </ul>
+      </nav>
+
 <div id="normalContainer">
     <div id="header"><img src="images/image_placeholder_1.jpg"></div>
     <div class="page" id="page1"><a href="Photography.html"><img src="images/image_placeholder_2.jpg""></a></div>
@@ -35,9 +51,7 @@
     <span id="four">04 <i class="fa fa-th-large" aria-hidden="true"></i></span>
   </div>
 
-  <nav class="sidebar">
-   <a href="index.html">Germaine Lau</a>
- </nav>
+<div class="HomeScrollUp"><i class="fa fa-angle-up" aria-hidden="true"></i></div>
 
  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
