--- a/VisualDesign.html
+++ b/VisualDesign.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Photography</title>
+	<title>Visual Design</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -28,8 +28,8 @@
 		<ul>
 			<li><a href="index.html" class="button">Home</a></li>
 			<li><a href="#" class="button">About Me</a></li>
-			<li><a href="Photography.html" class=" button currentLink">Photography</a></li>
-			<li><a href="#" class="button">Visual Design</a></li>
+			<li><a href="Photography.html" class=" button">Photography</a></li>
+			<li><a href="#" class="button currentLink">Visual Design</a></li>
 			<li><a href="#" class="button">Prints</a></li>
 			<li><a href="#" class="button">Branding</a></li>
 			<li>		<a href="#" class="close"><i class="fa fa-angle-left" aria-hidden="true"></i></a></li>
@@ -53,7 +53,7 @@
 	<div id="line"></div>
 	<div class="type">
 		<h3> Type: </h3>
-		<p> Photography</p> </div>
+		<p> Visual Design</p> </div>
 		<div class ="date">
 			<h3>Date:</h3>
 			<p>2015 - present</p>
@@ -67,24 +67,15 @@
 
 	<div id="gallery">
 
-		<div class="gallery_one">
-			<img src="images/DSC_7127.jpg" alt="" id="Legs">
-			<img src="images/Lau_2Timer1.jpg" alt="" id="Building">
-			<img src="images/R-5 copy.jpg" alt="" id="RebeccaSmall">
-			<img src="images/Lau_G_Special_1.jpg" alt="" id="">
-			<img src="images/Lau_Challenge3.jpg" alt="">
-			<img src="images/Tree.jpg" alt="">
-		</div>
-
-		<div class="gallery_two">
-			<img src="images/Lau_G_Shallow.jpg" alt="">
-			<img src="images/DSC_7154.jpg" alt="">
-			<img src="images/Lau_G_Light_1 (Edit) copy.jpg" alt="">
-			<img src="images/R-4.jpg" alt="">
-			<img src="images/Lau_CampPortB1.jpg" alt="">
+		<div class="vis">
+			<img src="images/Vis1.jpg" alt="" id="Legs">
+			<img src="images/Vis2.jpg" alt="" id="Building">
+			<img src="images/Vis3.jpg" alt="" id="RebeccaSmall">
+			<img src="images/Vis4.jpg" alt="" id="">
+			<img src="images/Vis5.jpg" alt="">
+			<img src="images/Vis6.jpg" alt="">
 		</div>
 	</div>
-	
 	<div class="scrollUp"><i class="fa fa-angle-up" aria-hidden="true"></i></div>
 
 
