Update: Fixed Floats and Description

--- a/VisualDesign.html
+++ b/VisualDesign.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="apple-touch-icon" href="apple-touch-icon.png">
+<!-- 	<link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
 	<!-- Place favicon.ico in the root directory -->
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+
 	<nav class="sidebar">
 		<div class="title">
 			<a href="#">Germaine Lau</a>
@@ -37,19 +38,6 @@
 			</nav>
 
 	<div class="general">
-<!-- 		<div id="firstVertical">
-			<ul> 
-				<li>1</li>
-				<li>2</li>
-			</ul>
-		</div>
-		<div id="vertical"></div>
-		<ul> 
-			<li>3</li>
-			<li>4</li>
-			<li>5</li>
-		</ul>
-	</div> -->
 	<div id="line"></div>
 	<div class="type">
 		<h3> Type: </h3>
@@ -78,9 +66,6 @@
 	</div>
 	<div class="scrollUp"><i class="fa fa-angle-up" aria-hidden="true"></i></div>
 
-
-
-
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 	<script src="js/plugins.js"></script>
@@ -97,5 +82,7 @@
 		ga('create','UA-XXXXX-X','auto');ga('send','pageview');
 	</script>
 </body>
+
+
 
 </html>
