--- a/Photography.html
+++ b/Photography.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="apple-touch-icon" href="apple-touch-icon.png">
+<!-- 	<link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
 	<!-- Place favicon.ico in the root directory -->
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -20,12 +20,13 @@
 </head>
 
 <body>
+
 	<nav class="sidebar">
 		<div class="title">
 			<a href="#">Germaine Lau</a>
 		</div>
 
-		<ul>
+<!-- 		<ul>
 			<li><a href="index.html" class="button">Home</a></li>
 			<li><a href="#" class="button">About Me</a></li>
 			<li><a href="Photography.html" class=" button currentLink">Photography</a></li>
@@ -33,61 +34,43 @@
 			<li><a href="#" class="button">Prints</a></li>
 			<li><a href="#" class="button">Branding</a></li>
 			<li>		<a href="#" class="close"><i class="fa fa-angle-left" aria-hidden="true"></i></a></li>
-		</ul>
+		</ul> -->
 			</nav>
 
-	<div class="general">
-<!-- 		<div id="firstVertical">
-			<ul> 
-				<li>1</li>
-				<li>2</li>
-			</ul>
-		</div>
-		<div id="vertical"></div>
-		<ul> 
-			<li>3</li>
-			<li>4</li>
-			<li>5</li>
-		</ul>
-	</div> -->
-	<div id="line"></div>
-	<div class="type">
-		<h3> Type: </h3>
-		<p> Photography</p> </div>
-		<div class ="date">
-			<h3>Date:</h3>
-			<p>2015 - present</p>
-		</div>
+	<article>
 
-		<article>
+		<div class="type"> <h3> Type: </h3>
+		<p>Photography</p>
+	</div>
+	<div class="date">
+	 <h3>Date:</h3>
+			<p>2015 - present</p> </div>
+		<div class="description">
 			<h3>Description:</h3>
 			<p>From doll heads to skyscrapers&mdash; a collection of photos taken since 2015. </p>
-		</article>
-	</div>
-
-	<div id="gallery">
-
-		<div class="gallery_one">
-			<img src="images/DSC_7127.jpg" alt="" id="Legs">
-			<img src="images/Lau_2Timer1.jpg" alt="" id="Building">
-			<img src="images/R-5 copy.jpg" alt="" id="RebeccaSmall">
-			<img src="images/Lau_G_Special_1.jpg" alt="" id="">
-			<img src="images/Lau_Challenge3.jpg" alt="">
-			<img src="images/Tree.jpg" alt="">
 		</div>
+	</article>
 
-		<div class="gallery_two">
+
+		<div class="gallery_two clearfix">
 			<img src="images/Lau_G_Shallow.jpg" alt="">
 			<img src="images/DSC_7154.jpg" alt="">
 			<img src="images/Lau_G_Light_1 (Edit) copy.jpg" alt="">
 			<img src="images/R-4.jpg" alt="">
 			<img src="images/Lau_CampPortB1.jpg" alt="">
 		</div>
-	</div>
+
+				<div class="gallery_one clearfix">
+			<img src="images/DSC_7127.jpg" alt="">
+			<img src="images/Lau_2Timer1.jpg" alt="">
+			<img src="images/R-5 copy.jpg" alt="">
+			<img src="images/Lau_G_Special_1.jpg" alt="">
+			<img src="images/Lau_Challenge3.jpg" alt="">
+			<img src="images/Tree.jpg" alt="">
+		</div>
+
 	
 	<div class="scrollUp"><i class="fa fa-angle-up" aria-hidden="true"></i></div>
-
-
 
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -106,5 +89,7 @@
 		ga('create','UA-XXXXX-X','auto');ga('send','pageview');
 	</script>
 </body>
+
+
 
 </html>
