--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+<!--   <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -20,11 +20,11 @@
 </head>
 
 <body>
-
-  <nav class="sidebar">
     <div class="title">
       <a href="#">Germaine Lau</a>
     </div>
+  <nav class="sidebar">
+
 
     <ul>
       <li><a href="index.html" class="button currentLink">Home</a></li>
@@ -38,7 +38,7 @@
       </nav>
 
 <div id="normalContainer">
-    <div id="header"><img src="images/image_placeholder_1.jpg"></div>
+    <div id="header"><!-- <img src="images/image_placeholder_1.jpg"> --></div>
     <div class="page" id="page1"><a href="Photography.html"><img src="images/image_placeholder_2.jpg""></a></div>
     <div class="page" id="page2"><img src="images/image_placeholder_1.jpg"></div>
     <div class="page" id="page3"><img src="images/image_placeholder_2.jpg""></div>
@@ -50,6 +50,8 @@
     <span id="slash">/</span>
     <span id="four">04 <i class="fa fa-th-large" aria-hidden="true"></i></span>
   </div>
+
+  <div class="se-pre-con"></div>
 
 <div class="HomeScrollUp"><i class="fa fa-angle-up" aria-hidden="true"></i></div>
 
