Update: Fixed Nav Bar

--- a/VisualDesign.html
+++ b/VisualDesign.html
@@ -21,7 +21,7 @@
 
 <body>
 
-	<nav class="sidebar">
+<!-- 	<nav class="sidebar">
 		<div class="title">
 			<a href="#">Germaine Lau</a>
 		</div>
@@ -35,27 +35,24 @@
 			<li><a href="#" class="button">Branding</a></li>
 			<li>		<a href="#" class="close"><i class="fa fa-angle-left" aria-hidden="true"></i></a></li>
 		</ul>
-			</nav>
+			</nav> -->
 
-	<div class="general">
-	<div id="line"></div>
-	<div class="type">
-		<h3> Type: </h3>
-		<p> Visual Design</p> </div>
-		<div class ="date">
-			<h3>Date:</h3>
-			<p>2015 - present</p>
-		</div>
+	<article>
 
-		<article>
+		<div class="type"> <h3> Type: </h3>
+		<p>Photography</p>
+	</div>
+	<div class="date">
+	 <h3>Date:</h3>
+			<p>Nov 2015 - Feb 2016</p> </div>
+		<div class="description">
 			<h3>Description:</h3>
 			<p>From doll heads to skyscrapers&mdash; a collection of photos taken since 2015. </p>
-		</article>
-	</div>
+		</div>
+	</article>
 
-	<div id="gallery">
 
-		<div class="vis">
+		<div class="vis clearfix">
 			<img src="images/Vis1.jpg" alt="" id="Legs">
 			<img src="images/Vis2.jpg" alt="" id="Building">
 			<img src="images/Vis3.jpg" alt="" id="RebeccaSmall">
@@ -63,7 +60,6 @@
 			<img src="images/Vis5.jpg" alt="">
 			<img src="images/Vis6.jpg" alt="">
 		</div>
-	</div>
 	<div class="scrollUp"><i class="fa fa-angle-up" aria-hidden="true"></i></div>
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
