Update: Changed Images and Created Collage View

--- a/VisualDesign.html
+++ b/VisualDesign.html
@@ -21,7 +21,7 @@
 
 <body>
 
-<!-- 	<nav class="sidebar">
+	<nav class="sidebar">
 		<div class="title">
 			<a href="#">Germaine Lau</a>
 		</div>
@@ -29,13 +29,13 @@
 		<ul>
 			<li><a href="index.html" class="button">Home</a></li>
 			<li><a href="#" class="button">About Me</a></li>
-			<li><a href="Photography.html" class=" button">Photography</a></li>
-			<li><a href="#" class="button currentLink">Visual Design</a></li>
+			<li><a href="Photography.html" class=" button currentLink">Photography</a></li>
+			<li><a href="#" class="button">Visual Design</a></li>
 			<li><a href="#" class="button">Prints</a></li>
 			<li><a href="#" class="button">Branding</a></li>
 			<li>		<a href="#" class="close"><i class="fa fa-angle-left" aria-hidden="true"></i></a></li>
 		</ul>
-			</nav> -->
+			</nav>
 
 	<article>
 
@@ -44,7 +44,7 @@
 	</div>
 	<div class="date">
 	 <h3>Date:</h3>
-			<p>Nov 2015 - Feb 2016</p> </div>
+			<p>2015 - present</p> </div>
 		<div class="description">
 			<h3>Description:</h3>
 			<p>From doll heads to skyscrapers&mdash; a collection of photos taken since 2015. </p>
