--- a/index.html
+++ b/index.html
@@ -20,16 +20,15 @@
 </head>
 
 <body>
+  <nav class="sidebar">
     <div class="title">
       <a href="#">Germaine Lau</a>
     </div>
-  <nav class="sidebar">
-
 
     <ul>
-      <li><a href="index.html" class="button currentLink">Home</a></li>
+      <li><a href="index.html" class="button">Home</a></li>
       <li><a href="#" class="button">About Me</a></li>
-      <li><a href="Photography.html" class=" button">Photography</a></li>
+      <li><a href="Photography.html" class=" button currentLink">Photography</a></li>
       <li><a href="#" class="button">Visual Design</a></li>
       <li><a href="#" class="button">Prints</a></li>
       <li><a href="#" class="button">Branding</a></li>
@@ -41,7 +40,7 @@
     <div id="header"><!-- <img src="images/image_placeholder_1.jpg"> --></div>
     <div class="page" id="page1"><a href="Photography.html"><img src="images/image_placeholder_2.jpg""></a></div>
     <div class="page" id="page2"><img src="images/image_placeholder_1.jpg"></div>
-    <div class="page" id="page3"><img src="images/image_placeholder_2.jpg""></div>
+    <div class="page" id="page3"><img src="images/test.jpg"></div>
     <div class="page" id="page4"><img src="images/image_placeholder_1.jpg"></div>
   </div>
 
