--- a/Photography.html
+++ b/Photography.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- 	<link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
+	<!-- 	<link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
 	<!-- Place favicon.ico in the root directory -->
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -26,7 +26,7 @@
 			<a href="#">Germaine Lau</a>
 		</div>
 
-<!-- 		<ul>
+		<ul>
 			<li><a href="index.html" class="button">Home</a></li>
 			<li><a href="#" class="button">About Me</a></li>
 			<li><a href="Photography.html" class=" button currentLink">Photography</a></li>
@@ -34,62 +34,64 @@
 			<li><a href="#" class="button">Prints</a></li>
 			<li><a href="#" class="button">Branding</a></li>
 			<li>		<a href="#" class="close"><i class="fa fa-angle-left" aria-hidden="true"></i></a></li>
-		</ul> -->
-			</nav>
+		</ul>
+	</nav>
 
 	<article>
 
 		<div class="type"> <h3> Type: </h3>
-		<p>Photography</p>
-	</div>
-	<div class="date">
-	 <h3>Date:</h3>
-			<p>2015 - present</p> </div>
-		<div class="description">
-			<h3>Description:</h3>
-			<p>From doll heads to skyscrapers&mdash; a collection of photos taken since 2015. </p>
+			<p>Photography</p>
 		</div>
-	</article>
+		<div class="date">
+			<h3>View:</h3>
+			<span id="grid" class="black"> <i class="fa fa-th-large" aria-hidden="true"></i></span>
+			<span id="slash">/</span>
+			<span id="collage" class="grey"> <i class="fa fa-th" aria-hidden="true"></i></span> </div>
+			<div class="description text">
+				<h3>Description:</h3>
+				<p>From doll heads to skyscrapers&mdash; a collection of photos taken since 2015. </p>
+			</div>
+		</article>
 
 
 		<div class="gallery_two clearfix">
-			<img src="images/Lau_G_Shallow.jpg" alt="">
-			<img src="images/DSC_7154.jpg" alt="">
-			<img src="images/Lau_G_Light_1 (Edit) copy.jpg" alt="">
-			<img src="images/R-4.jpg" alt="">
-			<img src="images/Lau_CampPortB1.jpg" alt="">
+			<img src="images/PhotoDoll.jpg" alt="" class="doll">
+			<img src="images/PhotoLegs.jpg" alt="" class="legs">
+			<img src="images/PhotoKevin.jpg" alt="" class="kevin">
+			<img src="images/PhotorebeccaVertical.jpg" alt="" class="rebecca">
+			<img src="images/PhotoPortrait.jpg" alt="" class="portrait">
 		</div>
 
-				<div class="gallery_one clearfix">
-			<img src="images/DSC_7127.jpg" alt="">
-			<img src="images/Lau_2Timer1.jpg" alt="">
-			<img src="images/R-5 copy.jpg" alt="">
-			<img src="images/Lau_G_Special_1.jpg" alt="">
-			<img src="images/Lau_Challenge3.jpg" alt="">
-			<img src="images/Tree.jpg" alt="">
+		<div class="gallery_one clearfix">
+			<img src="images/PhotoTwoLegs.jpg" alt="" class="twoLegs">
+			<img src="images/PhotoBlueBuilding.jpg" alt="" class="blueBuilding">
+			<img src="images/PhotoRebeccaEdit.jpg" alt="" class="rebeccaVertical">
+			<img src="images/PhotoBuildings.jpg" alt="" class="buildings">
+			<img src="images/PhotoPink.jpg" alt="" class=pink>
+			<img src="images/PhotoTree copy.jpg" alt="" class="tree">
 		</div>
 
-	
-	<div class="scrollUp"><i class="fa fa-angle-up" aria-hidden="true"></i></div>
+
+		<div class="scrollUp"><i class="fa fa-angle-up" aria-hidden="true"></i></div>
 
 
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-	<script src="js/plugins.js"></script>
-	<script src="js/vendor.js"></script>
-	<script src="js/main.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+		<script src="js/plugins.js"></script>
+		<script src="js/vendor.js"></script>
+		<script src="js/main.js"></script>
 
-	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-	<script>
-		(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-			function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-		e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-		e.src='//www.google-analytics.com/analytics.js';
-		r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-		ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-	</script>
-</body>
+		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+		<script>
+			(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+				function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+			e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+			e.src='//www.google-analytics.com/analytics.js';
+			r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+			ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+		</script>
+	</body>
 
 
 
-</html>
+	</html>
