Update: Three Image Grid

--- a/VisualDesign.html
+++ b/VisualDesign.html
@@ -29,8 +29,8 @@
 		<ul>
 			<li><a href="index.html" class="button">Home</a></li>
 			<li><a href="#" class="button">About Me</a></li>
-			<li><a href="Photography.html" class=" button currentLink">Photography</a></li>
-			<li><a href="#" class="button">Visual Design</a></li>
+			<li><a href="Photography.html" class=" button">Photography</a></li>
+			<li><a href="#" class="button currentLink">Visual Design</a></li>
 			<li><a href="#" class="button">Prints</a></li>
 			<li><a href="#" class="button">Branding</a></li>
 			<li>		<a href="#" class="close"><i class="fa fa-angle-left" aria-hidden="true"></i></a></li>
@@ -38,27 +38,42 @@
 			</nav>
 
 	<article>
-
 		<div class="type"> <h3> Type: </h3>
-		<p>Photography</p>
-	</div>
-	<div class="date">
-	 <h3>Date:</h3>
-			<p>2015 - present</p> </div>
-		<div class="description">
-			<h3>Description:</h3>
-			<p>From doll heads to skyscrapers&mdash; a collection of photos taken since 2015. </p>
+			<p>Visual Design</p>
 		</div>
-	</article>
+		<div class="date">
+			<h3>View:</h3>
+			<span id="grid" class="black"> <i class="fa fa-th-large" aria-hidden="true"></i></span></div>
+			<div class="description text">
+				<h3>Description:</h3>
+				<p>Mockup for a crowdfunding and volunteer website for millennials. Research included competitor analysis, eight interviews with nonprofits, and interviews with individuals between 20-34 years old.</p>
+			</div>
+		</article>
 
 
 		<div class="vis clearfix">
-			<img src="images/Vis1.jpg" alt="" id="Legs">
-			<img src="images/Vis2.jpg" alt="" id="Building">
-			<img src="images/Vis3.jpg" alt="" id="RebeccaSmall">
-			<img src="images/Vis4.jpg" alt="" id="">
+			<img src="images/Vis1.jpg" alt="">
+			<img src="images/Vis2.jpg" alt="">
+			<img src="images/Vis3.jpg" alt="">
+			<img src="images/Vis4.jpg" alt="">
 			<img src="images/Vis5.jpg" alt="">
 			<img src="images/Vis6.jpg" alt="">
+			<img src="images/Vis7.jpg" alt="">
+			<img src="images/Vis8.jpg" alt="">
+			<img src="images/Vis9.jpg" alt="">
+			<img src="images/Vis10.jpg" alt="">
+			<img src="images/Vis11.jpg" alt="">
+			<img src="images/Vis12.jpg" alt="">
+			<img src="images/Vis13.jpg" alt="">
+			<img src="images/Vis14.jpg" alt="">
+			<img src="images/Vis15.jpg" alt="">
+			<img src="images/Vis16.jpg" alt="">
+			<img src="images/Vis17.jpg" alt="">
+			<img src="images/Vis18.jpg" alt="">
+			<img src="images/Vis19.jpg" alt="">
+			<img src="images/Vis20.jpg" alt="">
+			<img src="images/Vis21.jpg" alt="">
+			<img src="images/Vis22.jpg" alt="">
 		</div>
 	<div class="scrollUp"><i class="fa fa-angle-up" aria-hidden="true"></i></div>
 
