--- a/Photography.html
+++ b/Photography.html
@@ -30,7 +30,7 @@
 			<li><a href="index.html" class="button">Home</a></li>
 			<li><a href="#" class="button">About Me</a></li>
 			<li><a href="Photography.html" class=" button currentLink">Photography</a></li>
-			<li><a href="#" class="button">Visual Design</a></li>
+			<li><a href="VisualDesign.html" class="button">Visual Design</a></li>
 			<li><a href="#" class="button">Prints</a></li>
 			<li><a href="#" class="button">Branding</a></li>
 			<li>		<a href="#" class="close"><i class="fa fa-angle-left" aria-hidden="true"></i></a></li>
@@ -38,7 +38,6 @@
 	</nav>
 
 	<article>
-
 		<div class="type"> <h3> Type: </h3>
 			<p>Photography</p>
 		</div>
@@ -49,27 +48,34 @@
 			<span id="collage" class="grey"> <i class="fa fa-th" aria-hidden="true"></i></span> </div>
 			<div class="description text">
 				<h3>Description:</h3>
-				<p>From doll heads to skyscrapers&mdash; a collection of photos taken since 2015. </p>
+				<p>From legs to skyscrapers&mdash; a collection of photos. </p>
 			</div>
 		</article>
 
 
 		<div class="gallery_two clearfix">
-			<img src="images/PhotoDoll.jpg" alt="" class="doll">
-			<img src="images/PhotoLegs.jpg" alt="" class="legs">
-			<img src="images/PhotoKevin.jpg" alt="" class="kevin">
-			<img src="images/PhotorebeccaVertical.jpg" alt="" class="rebecca">
-			<img src="images/PhotoPortrait.jpg" alt="" class="portrait">
+			<img src="images/PhotoDoll.jpg" alt="" >
+			<img src="images/PhotoLegs.jpg" alt="">
+			<img src="images/PhotoKevin.jpg" alt="">
+			<img src="images/PhotorebeccaVertical.jpg" alt="">
+			<img src="images/PhotoPortrait.jpg" alt="">
+
+
+		</div>
+
+		<div class="gallery_three">
+<!-- 		<img src="images/PhotoBuildings.jpg" alt=""><img src="images/PhotoKevin.jpg" alt=""><img src="images/PhotoLegs.jpg" alt=""><img src="images/PhotoPortrait.jpg" alt=""> -->
 		</div>
 
 		<div class="gallery_one clearfix">
-			<img src="images/PhotoTwoLegs.jpg" alt="" class="twoLegs">
-			<img src="images/PhotoBlueBuilding.jpg" alt="" class="blueBuilding">
-			<img src="images/PhotoRebeccaEdit.jpg" alt="" class="rebeccaVertical">
-			<img src="images/PhotoBuildings.jpg" alt="" class="buildings">
-			<img src="images/PhotoPink.jpg" alt="" class=pink>
-			<img src="images/PhotoTree copy.jpg" alt="" class="tree">
+			<img src="images/PhotoTwoLegs.jpg" alt="">
+			<img src="images/PhotoBlueBuilding.jpg" alt="">
+			<img src="images/PhotoRebeccaEdit.jpg" alt="">
+			<img src="images/PhotoBuildings.jpg" alt="">
+			<img src="images/PhotoPink.jpg" alt="">
+			<img src="images/PhotoTree copy.jpg" alt="">
 		</div>
+
 
 
 		<div class="scrollUp"><i class="fa fa-angle-up" aria-hidden="true"></i></div>
