--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     </div>
 
     <ul>
-      <li><a href="index.html" class="button">Home</a></li>
+      <li><a href="index.html currentLink" class="button">Home</a></li>
       <li><a href="#" class="button">About Me</a></li>
-      <li><a href="Photography.html" class=" button currentLink">Photography</a></li>
-      <li><a href="#" class="button">Visual Design</a></li>
+      <li><a href="Photography.html" class=" button">Photography</a></li>
+      <li><a href="VisualDesign.html" class="button ">Visual Design</a></li>
       <li><a href="#" class="button">Prints</a></li>
       <li><a href="#" class="button">Branding</a></li>
       <li>    <a href="#" class="close"><i class="fa fa-angle-left" aria-hidden="true"></i></a></li>
