Update: New Home Header

--- a/Photography.html
+++ b/Photography.html
@@ -54,7 +54,7 @@
 
 
 		<div class="gallery_two clearfix">
-			<img src="images/PhotoDoll.jpg" alt="" >
+			<img src="images/PhotoDoll.jpg" alt="" class="doll" >
 			<img src="images/PhotoLegs.jpg" alt="">
 			<img src="images/PhotoKevin.jpg" alt="">
 			<img src="images/PhotorebeccaVertical.jpg" alt="">
@@ -69,7 +69,7 @@
 
 		<div class="gallery_one clearfix">
 			<img src="images/PhotoTwoLegs.jpg" alt="">
-			<img src="images/PhotoBlueBuilding.jpg" alt="">
+			<img src="images/PhotoBlueBuilding.jpg" alt="" class="blueBuilding">
 			<img src="images/PhotoRebeccaEdit.jpg" alt="">
 			<img src="images/PhotoBuildings.jpg" alt="">
 			<img src="images/PhotoPink.jpg" alt="">
