--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </nav>
 
 <div id="normalContainer">
-    <div id="header"><!-- <img src="images/image_placeholder_1.jpg"> --></div>
+    <div id="header"></div>
     <div class="page" id="page1"><a href="Photography.html"><img src="images/image_placeholder_2.jpg""></a></div>
     <div class="page" id="page2"><img src="images/image_placeholder_1.jpg"></div>
     <div class="page" id="page3"><img src="images/test.jpg"></div>
