--- a/VisualDesign.html
+++ b/VisualDesign.html
@@ -46,7 +46,7 @@
 			<span id="grid" class="black"> <i class="fa fa-th-large" aria-hidden="true"></i></span></div>
 			<div class="description text">
 				<h3>Description:</h3>
-				<p>Mockup for a crowdfunding and volunteer website for millennials. Research included competitor analysis, eight interviews with nonprofits, and interviews with individuals between 20-34 years old.</p>
+				<p>Mockup for a crowdfunding and volunteer website targeting millennials. Research included competitor analysis as well as interviews with nonprofits and individuals between 20-34 years old.</p>
 			</div>
 		</article>
 
