Update: Fixed Section Borders

--- a/Photography.html
+++ b/Photography.html
@@ -11,7 +11,7 @@
 	<!-- Place favicon.ico in the root directory -->
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Oswald:300,400,700|Pathway+Gothic+One" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Oswald:300,400,700|Cutive+Mono" rel="stylesheet">
 
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
@@ -37,8 +37,8 @@
 		</ul>
 	</nav>
 
-	<article>
-		<div class="type"> <h3> Type: </h3>
+	<article class="clearfix">
+		<div class="type"> <h3> Type:</h3>
 			<p>Photography</p>
 		</div>
 		<div class="date">
