--- a/VisualDesign.html
+++ b/VisualDesign.html
@@ -11,7 +11,8 @@
 	<!-- Place favicon.ico in the root directory -->
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Oswald:300,400,700|Pathway+Gothic+One" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Oswald:300,400,700|Cutive+Mono" rel="stylesheet">
+
 
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
@@ -43,10 +44,10 @@
 		</div>
 		<div class="date">
 			<h3>View:</h3>
-			<span id="grid" class="black"> <i class="fa fa-th-large" aria-hidden="true"></i></span></div>
+			<span id="grid" class="black"> <i class="fa fa-bars" aria-hidden="true"></i></span></div>
 			<div class="description text">
 				<h3>Description:</h3>
-				<p>Mockup for a crowdfunding and volunteer website targeting millennials. Research included competitor analysis as well as interviews with nonprofits and individuals between 20-34 years old.</p>
+				<p>Crowdfunding and volunteer website targeting millennials. Research included competitor analysis as well as interviews with nonprofits and individuals between 20-34 years old.</p>
 			</div>
 		</article>
 
