--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,700|Cutive+Mono" rel="stylesheet">
+
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
@@ -26,7 +28,7 @@
     </div>
 
     <ul>
-      <li><a href="index.html currentLink" class="button">Home</a></li>
+      <li><a href="index.html" class="button currentLink">Home</a></li>
       <li><a href="#" class="button">About Me</a></li>
       <li><a href="Photography.html" class=" button">Photography</a></li>
       <li><a href="VisualDesign.html" class="button ">Visual Design</a></li>
@@ -36,21 +38,21 @@
     </ul>
       </nav>
 
-<div id="normalContainer">
+<!-- <div id="normalContainer"> -->
     <div id="header"></div>
-    <div class="page" id="page1"><a href="Photography.html"><img src="images/image_placeholder_2.jpg""></a></div>
-    <div class="page" id="page2"><img src="images/image_placeholder_1.jpg"></div>
+<!--     <div class="page" id="page1"><a href="Photography.html"><img src="images/image_placeholder_2.jpg""></a></div> -->
+<!--     <div class="page" id="page2"><img src="images/image_placeholder_1.jpg"></div>
     <div class="page" id="page3"><img src="images/test.jpg"></div>
     <div class="page" id="page4"><img src="images/image_placeholder_1.jpg"></div>
-  </div>
+  </div> -->
 
-  <div id="views">
+<!--   <div id="views">
     <span id="one" class="black">01 <i class="fa fa-bars" aria-hidden="true"></i></span>
     <span id="slash">/</span>
     <span id="four">04 <i class="fa fa-th-large" aria-hidden="true"></i></span>
   </div>
 
-  <div class="se-pre-con"></div>
+  <div class="se-pre-con"></div> -->
 
 <div class="HomeScrollUp"><i class="fa fa-angle-up" aria-hidden="true"></i></div>
 
