Update: Header and Fingers

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 </head>
 
 <body>
-  <nav class="sidebar">
+  <nav class="sidebar one">
     <div class="title">
+    <i class="fa fa-angle-left hamburger" aria-hidden="true"></i>
       <a href="#">Germaine Lau</a>
     </div>
 
