--- a/Photography.html
+++ b/Photography.html
@@ -21,7 +21,7 @@
 
 <body>
 
-	<nav class="sidebar">
+	<nav class="sidebar three">
 		<div class="title">
 			<a href="#">Germaine Lau</a>
 		</div>
