Update: All Pages

--- a/About.html
+++ b/About.html
@@ -22,14 +22,14 @@
 
 <body>
 
-	<nav class="sidebar four">
+	<nav class="sidebar two">
 		<div class="title">
 			<a href="#">Germaine Lau</a>
 		</div>
 
 		<ul>
 			<li><a href="index.html" class="button">Home</a></li>
-			<li><a href="About.html" class="button currentLink four">About Me</a></li>
+			<li><a href="#" class="button currentLink four">About Me</a></li>
 			<li><a href="Photography.html" class=" button">Photography</a></li>
 			<li><a href="VisualDesign.html" class="button">Visual Design</a></li>
 			<li><a href="#" class="button">Prints</a></li>
@@ -44,13 +44,14 @@
 		</div>
 			<div class="description text">
 				<h3>Description:</h3>
-				<p>Academy of Art graphic design student.</p>
+				<p>Academy of Art graphic design student</p>
 			</div>
 		</article>
 
 
 		<div class="vis clearfix">
-			<img src="images/Vis1.jpg" alt="">
+			<img src="images/Self.jpg" alt="">
+			<img src="images/Self2.jpg" alt="">
 
 		</div>
 	<div class="scrollUp"><i class="fa fa-angle-up" aria-hidden="true"></i></div>
