--- a/Photography.html
+++ b/Photography.html
@@ -28,8 +28,8 @@
 
 		<ul>
 			<li><a href="index.html" class="button">Home</a></li>
-			<li><a href="#" class="button">About Me</a></li>
-			<li><a href="Photography.html" class=" button currentLink">Photography</a></li>
+			<li><a href="About.html" class="button">About Me</a></li>
+			<li><a href="#" class=" button currentLink">Photography</a></li>
 			<li><a href="VisualDesign.html" class="button">Visual Design</a></li>
 			<li><a href="#" class="button">Prints</a></li>
 			<li><a href="#" class="button">Branding</a></li>
