--- a/VisualDesign.html
+++ b/VisualDesign.html
@@ -29,7 +29,7 @@
 
 		<ul>
 			<li><a href="index.html" class="button">Home</a></li>
-			<li><a href="#" class="button">About Me</a></li>
+			<li><a href="About.html" class="button">About Me</a></li>
 			<li><a href="Photography.html" class=" button">Photography</a></li>
 			<li><a href="#" class="button currentLink">Visual Design</a></li>
 			<li><a href="#" class="button">Prints</a></li>
