--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </div>
 
     <ul>
-      <li><a href="index.html" class="button currentLink">Home</a></li>
-      <li><a href="#" class="button">About Me</a></li>
+      <li><a href="#" class="button currentLink">Home</a></li>
+      <li><a href="About.html" class="button">About Me</a></li>
       <li><a href="Photography.html" class=" button">Photography</a></li>
       <li><a href="VisualDesign.html" class="button ">Visual Design</a></li>
       <li><a href="#" class="button">Prints</a></li>
