--- a/VisualDesign.html
+++ b/VisualDesign.html
@@ -47,7 +47,7 @@
 			<span id="grid" class="black"> <i class="fa fa-bars" aria-hidden="true"></i></span></div>
 			<div class="description text">
 				<h3>Description:</h3>
-				<p>Crowdfunding and volunteer website targeting millennials. Research included competitor analysis as well as interviews with nonprofits and individuals between 20-34 years old.</p>
+				<p>Crowdfunding and volunteering website targeting millennials. Research included competitor analysis as well as interviews with nonprofits and individuals between 20-34 years old.</p>
 			</div>
 		</article>
 
