--- a/Photography.html
+++ b/Photography.html
@@ -55,27 +55,30 @@
 
 		<div class="gallery_two clearfix">
 			<img src="images/PhotoDoll.jpg" alt="" class="doll" >
-			<img src="images/PhotoLegs.jpg" alt="">
-			<img src="images/PhotoKevin.jpg" alt="">
-			<img src="images/PhotoRebeccaVertical2.jpg" alt="">
-			<img src="images/PhotoPortrait.jpg" alt="">
-
+			<img src="images/PhotoLegs.jpg" alt="" class="photoTwoLegs remove">
+			<img src="images/PhotoKevin.jpg" alt="" class="kevin remove">
+			<img src="images/PhotoPink.jpg" alt="" class="pink">
+			<img src="images/PhotoRebeccaVertical2.jpg" alt="" class="rebecca">
+			<img src="images/PhotoPortrait.jpg" alt="" class="portrait">
 
 		</div>
 
 		<div class="gallery_three">
-<!-- 		<img src="images/PhotoBuildings.jpg" alt=""><img src="images/PhotoKevin.jpg" alt=""><img src="images/PhotoLegs.jpg" alt=""><img src="images/PhotoPortrait.jpg" alt=""> -->
+			<img src="images/PhotoBuildings.jpg" alt="" class="blueBuilding">
+			<img src="images/PhotoKevin.jpg" alt="" class="kevin">
+			<img src="images/PhotoLegs.jpg" alt="" class="photoTwoLegs">
+			<img src="images/PhotoTree copy.jpg" alt="" class="tree">
 		</div>
 
 		<div class="gallery_one clearfix">
-			<img src="images/PhotoTwoLegs.jpg" alt="">
+			<img src="images/PhotoTwoLegs.jpg" alt="" class="photoTwoLegs">
 			<img src="images/PhotoBlueBuilding.jpg" alt="" class="blueBuilding">
-			<img src="images/PhotoRebeccaEdit.jpg" alt="">
-			<img src="images/PhotoBuildings.jpg" alt="">
-			<img src="images/PhotoPink.jpg" alt="">
-			<img src="images/PhotoTree copy.jpg" alt="">
+			<img src="images/PhotoNorway.jpg" alt="" class="denmark">
+			<img src="images/PhotoRebeccaEdit.jpg" alt="" class="rebecca">
+			<img src="images/PhotoBuildings.jpg" alt="" class="blueBuilding remove">
+			<img src="images/Lau_Polariz2.jpg" alt="" class="polariz">
+			<img src="images/PhotoTree copy.jpg" alt="" class="tree remove">
 		</div>
-
 
 
 		<div class="scrollUp"><i class="fa fa-angle-up" aria-hidden="true"></i></div>
