--- a/VisualDesign.html
+++ b/VisualDesign.html
@@ -68,10 +68,10 @@
 			<img src="images/Vis13.jpg" alt="">
 			<img src="images/Vis14.jpg" alt="">
 			<img src="images/Vis15.jpg" alt="">
-			<img src="images/Vis16.jpg" alt="">
+			<img src="images/Vis16-2.jpg" alt="">
 			<img src="images/Vis17.jpg" alt="">
 			<img src="images/Vis18.jpg" alt="">
-			<img src="images/Vis19.jpg" alt="">
+			<img src="images/Vis19-2.jpg" alt="">
 			<img src="images/Vis20.jpg" alt="">
 			<img src="images/Vis21.jpg" alt="">
 			<img src="images/Vis22.jpg" alt="">
