Update: About and Vis Responsive

--- a/About.html
+++ b/About.html
@@ -24,6 +24,7 @@
 
 	<nav class="sidebar two">
 		<div class="title">
+    <i class="fa fa-angle-left hamburger" aria-hidden="true"></i>
 			<a href="#">Germaine Lau</a>
 		</div>
 
@@ -38,7 +39,12 @@
 		</ul>
 			</nav>
 
-	<article class="clearfix">
+
+		<div class="clearfix">
+			<img src="images/Self.jpg" alt="" class="self">
+<!-- 			<img src="images/Self2.jpg" alt=""> -->
+
+	<article class="clearfix about">
 		<div class="type"> <h3> Name: </h3>
 			<p>Germaine Lau</p>
 		</div>
@@ -47,13 +53,8 @@
 				<p>Academy of Art graphic design student</p>
 			</div>
 		</article>
-
-
-		<div class="vis clearfix">
-			<img src="images/Self.jpg" alt="">
-			<img src="images/Self2.jpg" alt="">
-
 		</div>
+
 	<div class="scrollUp"><i class="fa fa-angle-up" aria-hidden="true"></i></div>
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
