--- a/Photography.html
+++ b/Photography.html
@@ -23,6 +23,7 @@
 
 	<nav class="sidebar three">
 		<div class="title">
+		    <i class="fa fa-angle-left hamburger" aria-hidden="true"></i>
 			<a href="#">Germaine Lau</a>
 		</div>
 
@@ -36,22 +37,6 @@
 			<li>		<a href="#" class="close"><i class="fa fa-angle-left" aria-hidden="true"></i></a></li>
 		</ul>
 	</nav>
-
-	<article class="clearfix">
-		<div class="type"> <h3> Type:</h3>
-			<p>Photography</p>
-		</div>
-		<div class="date">
-			<h3>View:</h3>
-			<span id="grid" class="black"> <i class="fa fa-th-large" aria-hidden="true"></i></span>
-			<span id="slash">/</span>
-			<span id="collage" class="grey"> <i class="fa fa-th" aria-hidden="true"></i></span> </div>
-			<div class="description text">
-				<h3>Description:</h3>
-				<p>From legs to skyscrapers&mdash; a collection of photos. </p>
-			</div>
-		</article>
-
 
 		<div class="gallery_two clearfix">
 			<img src="images/PhotoDoll.jpg" alt="" class="doll" >
@@ -79,6 +64,35 @@
 			<img src="images/Lau_Polariz2.jpg" alt="" class="polariz">
 			<img src="images/PhotoTree copy.jpg" alt="" class="tree remove">
 		</div>
+
+		<div class="gallery_single clearfix">
+		<img src="images/PhotoTwoLegs.jpg" alt="" class="photoTwoLegs">
+		<img src="images/PhotoLegs.jpg" alt="" class="photoTwoLegs remove">
+		<img src="images/PhotoDoll.jpg" alt="" class="doll" >
+		<img src="images/PhotoBuildings.jpg" alt="" class="blueBuilding">
+		<img src="images/PhotoNorway.jpg" alt="" class="denmark">
+		<img src="images/PhotoKevin.jpg" alt="" class="kevin remove">
+		<img src="images/PhotoPink.jpg" alt="" class="pink">
+		<img src="images/PhotoRebeccaEdit.jpg" alt="" class="rebecca">
+		<img src="images/PhotoRebeccaVertical2.jpg" alt="" class="rebecca">
+		<img src="images/Lau_Polariz2.jpg" alt="" class="polariz">
+
+		</div>
+
+	<article class="clearfix">
+		<div class="type"> <h3> Type:</h3>
+			<p>Photography</p>
+		</div>
+		<div class="date">
+			<h3>View:</h3>
+			<span id="grid" class="black"> <i class="fa fa-th-large" aria-hidden="true"></i></span>
+			<span id="slash">/</span>
+			<span id="collage" class="grey"> <i class="fa fa-th" aria-hidden="true"></i></span> </div>
+			<div class="description text">
+				<h3>Description:</h3>
+				<p>From legs to skyscrapers&mdash; a collection of photos. </p>
+			</div>
+		</article>
 
 
 		<div class="scrollUp"><i class="fa fa-angle-up" aria-hidden="true"></i></div>
