--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <nav class="sidebar bar one">
     <div class="title">
-    <i class="fa fa-angle-left left" aria-hidden="true"></i>
+    <i class="fa fa-angle-left hamburger" aria-hidden="true"></i>
 <!--     <i class="fa fa-align-justify hamburger" aria-hidden="true"></i> -->
       <a href="#">Germaine Lau</a>
     </div>
