--- a/VisualDesign.html
+++ b/VisualDesign.html
@@ -24,6 +24,7 @@
 
 	<nav class="sidebar four">
 		<div class="title">
+		    <i class="fa fa-angle-left hamburger" aria-hidden="true"></i>
 			<a href="#">Germaine Lau</a>
 		</div>
 
@@ -37,19 +38,6 @@
 			<li>		<a href="#" class="close"><i class="fa fa-angle-left" aria-hidden="true"></i></a></li>
 		</ul>
 			</nav>
-
-	<article>
-		<div class="type"> <h3> Type: </h3>
-			<p>Visual Design</p>
-		</div>
-		<div class="date">
-			<h3>View:</h3>
-			<span id="grid" class="black"> <i class="fa fa-bars" aria-hidden="true"></i></span></div>
-			<div class="description text">
-				<h3>Description:</h3>
-				<p>Crowdfunding and volunteering website targeting millennials. Research included competitor analysis as well as interviews with nonprofits and individuals between 20-34 years old.</p>
-			</div>
-		</article>
 
 
 		<div class="vis clearfix">
@@ -76,7 +64,21 @@
 			<img src="images/Vis21.jpg" alt="">
 			<img src="images/Vis22.jpg" alt="">
 		</div>
-	<div class="scrollUp"><i class="fa fa-angle-up" aria-hidden="true"></i></div>
+
+		<article>
+		<div class="type"> <h3> Type: </h3>
+			<p>Visual Design</p>
+		</div>
+		<div class="date">
+			<h3>View:</h3>
+			<span id="grid" class="black"> <i class="fa fa-bars" aria-hidden="true"></i></span></div>
+			<div class="description text">
+				<h3>Description:</h3>
+				<p>Crowdfunding and volunteering website targeting millennials. Research included competitor analysis as well as interviews with nonprofits and individuals between 20-34 years old.</p>
+			</div>
+		</article>
+
+			<div class="scrollUp"><i class="fa fa-angle-up" aria-hidden="true"></i></div>
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
